Migrate to IntelliJ Platform Gradle Plugin and update IntelliJ versions